feat: clients endpoint
